Fix alignment for lists

--- a/public/app.css
+++ b/public/app.css
@@ -955,8 +955,10 @@ blockquote {
 
 ol {
     list-style-type: decimal;
+    margin-left: 1rem;
 }
 
 ul {
     list-style-type: disc;
+    margin-left: 1rem;
 }
